:recycle: Insert 빌더 리팩토링